# TP_RIA

./: .gitignore  pyproject.toml
api/: app.py
api/routes/: student.py
